# ================================================================================================
#  workshop
#  Copyright (C) 2022 Tim Leonard
# ================================================================================================

include_directories("${ENV_ROOT_PATH}/games/example/source")

add_subdirectory(example)


